--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Deploy Package
 
 on: [push]
 
@@ -8,12 +8,14 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Pull Source Files
+      uses: actions/checkout@v1
 
     - name: Setup Nuget.exe
       uses: warrenbuckley/Setup-Nuget@v1
       
     - name: Run a multi-line script
+      shell: pwsh
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        Get-Content -path content\q-sys-plugin-template.qplug
+        
