Added token as Env variable

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,11 @@ jobs:
         nuget pack -Version $Env:GITHUB_REF.Replace("refs/tags/","")
 
     - name: Push with nuget.exe
+      env: # Or as an environment variable
+        GITHUB_PACKAGE_TOKEN: ${{ secrets.GITHUB_PACKAGE_TOKEN }}
       run: |
         $NUPKG = (Get-ChildItem -Path "." -Include *.nupkg -Force -Recurse -File | Select-Object -First 1).Name
-        nuget source Add -Name "GitHub" -Source "https://nuget.pkg.github.com/thatgitsam/index.json" -UserName thatgitsam -Password $Env:GITHUB_TOKEN
+        nuget source Add -Name "GitHub" -Source "https://nuget.pkg.github.com/thatgitsam/index.json" -UserName thatgitsam -Password $Env:GITHUB_PACKAGE_TOKEN
         nuget push $NUPKG -Source "GitHub"
 
         
