Added dummy ApiKey

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,6 @@ jobs:
       run: |
         $NUPKG = (Get-ChildItem -Path "." -Include *.nupkg -Force -Recurse -File | Select-Object -First 1).Name
         nuget source Add -Name "GitHub" -Source "https://nuget.pkg.github.com/thatgitsam/index.json" -UserName thatgitsam -Password $Env:GITHUB_PACKAGE_TOKEN
-        nuget push $NUPKG -Source "GitHub"
+        nuget push $NUPKG -Source "GitHub" -ApiKey "000"
 
         
